crates/ast/tests/snapshots/ast__interface_base.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
AstFile {
    package: Some(
        AstPackage {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:22 },
            },
            annotated: [],
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint { 0:8 },
                    end: AstPoint { 0:21 },
                },
                value: "ch.emilycares",
            },
        },
    ),
    imports: Some(
        AstImports {
            range: AstRange {
                start: AstPoint { 2:0 },
                end: AstPoint { 3:31 },
            },
            imports: [
                AstImport {
                    range: AstRange {
                        start: AstPoint { 2:0 },
                        end: AstPoint { 2:38 },
                    },
                    unit: Class(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 2:7 },
                                end: AstPoint { 2:37 },
                            },
                            value: "java.util.function.IntFunction",
                        },
                    ),
                },
                AstImport {
                    range: AstRange {
                        start: AstPoint { 3:0 },
                        end: AstPoint { 3:31 },
                    },
                    unit: Class(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 3:7 },
                                end: AstPoint { 3:30 },
                            },
                            value: "java.util.stream.Stream",
                        },
                    ),
                },
            ],
        },
    ),
    things: [
        Interface(
            AstInterface {
                range: AstRange {
                    start: AstPoint { 5:0 },
                    end: AstPoint { 11:1 },
                },
                availability: AstAvailability(
                    Public,
                ),
                attributes: AstThingAttributes(
                    0x0,
                ),
                annotated: [],
                name: AstIdentifier {
                    range: AstRange {
                        start: AstPoint { 5:17 },
                        end: AstPoint { 5:30 },
                    },
                    value: "InterfaceBase",
                },
                type_parameters: None,
                extends: None,
                constants: [],
                methods: [
                    AstInterfaceMethod {
                        range: AstRange {
                            start: AstPoint { 6:4 },
                            end: AstPoint { 6:60 },
                        },
                        annotated: [],
                        header: AstMethodHeader {
                            range: AstRange {
                                start: AstPoint { 6:4 },
                                end: AstPoint { 6:59 },
                            },
                            availability: AstAvailability(
                                0x0,
                            ),
                            name: AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 6:18 },
                                    end: AstPoint { 6:26 },
                                },
                                value: "mapToObj",
                            },
                            jtype: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 6:8 },
                                    end: AstPoint { 6:17 },
                                },
                                value: Generic(
                                    AstIdentifier {
                                        range: AstRange {
                                            start: AstPoint { 6:8 },
                                            end: AstPoint { 6:14 },
                                        },
                                        value: "Stream",
                                    },
                                    [
                                        AstJType {
                                            annotated: [],
                                            range: AstRange {
                                                start: AstPoint { 6:15 },
                                                end: AstPoint { 6:16 },
                                            },
                                            value: Class(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 6:15 },
                                                        end: AstPoint { 6:16 },
                                                    },
                                                    value: "U",
                                                },
                                            ),
                                        },
                                    ],
                                ),
                            },
                            parameters: AstMethodParameters {
                                range: AstRange {
                                    start: AstPoint { 6:26 },
                                    end: AstPoint { 6:59 },
                                },
                                parameters: [
                                    AstMethodParameter {
                                        range: AstRange {
                                            start: AstPoint { 6:27 },
                                            end: AstPoint { 6:58 },
                                        },
                                        annotated: [],
                                        jtype: AstJType {
                                            annotated: [],
                                            range: AstRange {
                                                start: AstPoint { 6:27 },
                                                end: AstPoint { 6:51 },
                                            },
                                            value: Generic(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 6:27 },
                                                        end: AstPoint { 6:38 },
                                                    },
                                                    value: "IntFunction",
                                                },
                                                [
                                                    AstJType {
                                                        annotated: [],
                                                        range: AstRange {
                                                            start: AstPoint { 6:39 },
                                                            end: AstPoint { 6:50 },
                                                        },
                                                        value: Wildcard,
                                                    },
                                                    AstJType {
                                                        annotated: [],
                                                        range: AstRange {
                                                            start: AstPoint { 6:49 },
                                                            end: AstPoint { 6:50 },
                                                        },
                                                        value: Class(
                                                            AstIdentifier {
                                                                range: AstRange {
                                                                    start: AstPoint { 6:49 },
                                                                    end: AstPoint { 6:50 },
                                                                },
                                                                value: "U",
                                                            },
                                                        ),
                                                    },
                                                ],
                                            ),
                                        },
                                        name: AstIdentifier {
                                            range: AstRange {
                                                start: AstPoint { 6:52 },
                                                end: AstPoint { 6:58 },
                                            },
                                            value: "mapper",
                                        },
                                        fin: false,
                                        variatic: false,
                                    },
                                ],
                            },
                            throws: None,
                            type_parameters: Some(
                                AstTypeParameters {
                                    range: AstRange {
                                        start: AstPoint { 6:4 },
                                        end: AstPoint { 6:7 },
                                    },
                                    parameters: [
                                        AstTypeParameter {
                                            range: AstRange {
                                                start: AstPoint { 6:5 },
                                                end: AstPoint { 6:6 },
                                            },
                                            annotated: [],
                                            name: AstIdentifier {
                                                range: AstRange {
                                                    start: AstPoint { 6:5 },
                                                    end: AstPoint { 6:6 },
                                                },
                                                value: "U",
                                            },
                                            supperclass: Some(
                                                [],
                                            ),
                                        },
                                    ],
                                },
                            ),
                            annotated: [],
                        },
                    },
                ],
                default_methods: [
                    AstInterfaceMethodDefault {
                        range: AstRange {
                            start: AstPoint { 8:4 },
                            end: AstPoint { 10:5 },
                        },
                        annotated: [],
                        header: AstMethodHeader {
                            range: AstRange {
                                start: AstPoint { 8:11 },
                                end: AstPoint { 8:37 },
                            },
                            availability: AstAvailability(
                                Public | Static,
                            ),
                            name: AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 8:23 },
                                    end: AstPoint { 8:24 },
                                },
                                value: "a",
                            },
                            jtype: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 8:21 },
                                    end: AstPoint { 8:22 },
                                },
                                value: Class(
                                    AstIdentifier {
                                        range: AstRange {
                                            start: AstPoint { 8:21 },
                                            end: AstPoint { 8:22 },
                                        },
                                        value: "A",
                                    },
                                ),
                            },
                            parameters: AstMethodParameters {
                                range: AstRange {
                                    start: AstPoint { 8:24 },
                                    end: AstPoint { 8:37 },
                                },
                                parameters: [
                                    AstMethodParameter {
                                        range: AstRange {
                                            start: AstPoint { 8:25 },
                                            end: AstPoint { 8:36 },
                                        },
                                        annotated: [],
                                        jtype: AstJType {
                                            annotated: [],
                                            range: AstRange {
                                                start: AstPoint { 8:31 },
                                                end: AstPoint { 8:32 },
                                            },
                                            value: Class(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 8:31 },
                                                        end: AstPoint { 8:32 },
                                                    },
                                                    value: "A",
                                                },
                                            ),
                                        },
                                        name: AstIdentifier {
                                            range: AstRange {
                                                start: AstPoint { 8:33 },
                                                end: AstPoint { 8:36 },
                                            },
                                            value: "arg",
                                        },
                                        fin: true,
                                        variatic: false,
                                    },
                                ],
                            },
                            throws: None,
                            type_parameters: Some(
                                AstTypeParameters {
                                    range: AstRange {
                                        start: AstPoint { 8:17 },
                                        end: AstPoint { 8:20 },
                                    },
                                    parameters: [
                                        AstTypeParameter {
                                            range: AstRange {
                                                start: AstPoint { 8:18 },
                                                end: AstPoint { 8:19 },
                                            },
                                            annotated: [],
                                            name: AstIdentifier {
                                                range: AstRange {
                                                    start: AstPoint { 8:18 },
                                                    end: AstPoint { 8:19 },
                                                },
                                                value: "A",
                                            },
                                            supperclass: Some(
                                                [],
                                            ),
                                        },
                                    ],
                                },
                            ),
                            annotated: [],
                        },
                        block: AstBlock {
                            range: AstRange {
                                start: AstPoint { 8:38 },
                                end: AstPoint { 10:5 },
                            },
                            entries: [
                                Return(
                                    AstBlockReturn {
                                        range: AstRange {
                                            start: AstPoint { 9:8 },
                                            end: AstPoint { 9:19 },
                                        },
                                        expression: Expression(
                                            [
                                                Base(
                                                    AstBaseExpression {
                                                        range: AstRange {
                                                            start: AstPoint { 9:15 },
                                                            end: AstPoint { 9:18 },
                                                        },
                                                        ident: Some(
                                                            Identifier(
                                                                AstIdentifier {
                                                                    range: AstRange {
                                                                        start: AstPoint { 9:15 },
                                                                        end: AstPoint { 9:18 },
                                                                    },
                                                                    value: "arg",
                                                                },
                                                            ),
                                                        ),
                                                        values: None,
                                                        operator: None,
                                                    },
                                                ),
                                            ],
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ],
                inner: [],
                permits: [],
            },
        ),
    ],
    modules: [],
}
