crates/ast/tests/snapshots/ast__jtype_access.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:15 },
        },
        value: Access {
            base: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:9 },
                },
                value: Class(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:0 },
                            end: AstPoint { 0:9 },
                        },
                        value: "Something",
                    },
                ),
            },
            inner: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:10 },
                    end: AstPoint { 0:15 },
                },
                value: Class(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:10 },
                            end: AstPoint { 0:15 },
                        },
                        value: "Inner",
                    },
                ),
            },
        },
    },
    3,
)
