crates/ast/tests/snapshots/ast__jtype_class_generic.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:24 },
        },
        value: Generic(
            AstIdentifier {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:7 },
                },
                value: "HashMap",
            },
            [
                AstJType {
                    annotated: [],
                    range: AstRange {
                        start: AstPoint { 0:8 },
                        end: AstPoint { 0:14 },
                    },
                    value: Class(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:8 },
                                end: AstPoint { 0:14 },
                            },
                            value: "String",
                        },
                    ),
                },
                AstJType {
                    annotated: [],
                    range: AstRange {
                        start: AstPoint { 0:16 },
                        end: AstPoint { 0:23 },
                    },
                    value: Class(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:16 },
                                end: AstPoint { 0:23 },
                            },
                            value: "Integer",
                        },
                    ),
                },
            ],
        ),
    },
    6,
)
