crates/ast/tests/snapshots/ast__jtype_class_generic_generic.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:19 },
        },
        value: Generic(
            AstIdentifier {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:9 },
                },
                value: "Predicate",
            },
            [
                AstJType {
                    annotated: [],
                    range: AstRange {
                        start: AstPoint { 0:10 },
                        end: AstPoint { 0:18 },
                    },
                    value: Generic(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:10 },
                                end: AstPoint { 0:15 },
                            },
                            value: "Class",
                        },
                        [
                            AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 0:16 },
                                    end: AstPoint { 0:18 },
                                },
                                value: Wildcard,
                            },
                        ],
                    ),
                },
            ],
        ),
    },
    7,
)
