crates/ast/tests/snapshots/ast__jtype_generic_array.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:10 },
        },
        value: Array(
            AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:8 },
                },
                value: Generic(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:0 },
                            end: AstPoint { 0:5 },
                        },
                        value: "Entry",
                    },
                    [
                        AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:6 },
                                end: AstPoint { 0:7 },
                            },
                            value: Class(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:6 },
                                        end: AstPoint { 0:7 },
                                    },
                                    value: "T",
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    },
    6,
)
