crates/ast/tests/snapshots/ast__jtype_int.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:3 },
        },
        value: Int,
    },
    1,
)
