crates/ast/tests/snapshots/ast__jtype_int_array.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:5 },
        },
        value: Array(
            AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:3 },
                },
                value: Int,
            },
        ),
    },
    3,
)
