crates/ast/tests/snapshots/ast__jtype_package.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:36 },
        },
        value: Access {
            base: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:5 },
                },
                value: Class(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:0 },
                            end: AstPoint { 0:5 },
                        },
                        value: "javax",
                    },
                ),
            },
            inner: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:6 },
                    end: AstPoint { 0:36 },
                },
                value: Access {
                    base: AstJType {
                        annotated: [],
                        range: AstRange {
                            start: AstPoint { 0:6 },
                            end: AstPoint { 0:12 },
                        },
                        value: Class(
                            AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 0:6 },
                                    end: AstPoint { 0:12 },
                                },
                                value: "crypto",
                            },
                        ),
                    },
                    inner: AstJType {
                        annotated: [],
                        range: AstRange {
                            start: AstPoint { 0:13 },
                            end: AstPoint { 0:36 },
                        },
                        value: Access {
                            base: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 0:13 },
                                    end: AstPoint { 0:23 },
                                },
                                value: Class(
                                    AstIdentifier {
                                        range: AstRange {
                                            start: AstPoint { 0:13 },
                                            end: AstPoint { 0:23 },
                                        },
                                        value: "interfaces",
                                    },
                                ),
                            },
                            inner: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 0:24 },
                                    end: AstPoint { 0:36 },
                                },
                                value: Class(
                                    AstIdentifier {
                                        range: AstRange {
                                            start: AstPoint { 0:24 },
                                            end: AstPoint { 0:36 },
                                        },
                                        value: "DHPrivateKey",
                                    },
                                ),
                            },
                        },
                    },
                },
            },
        },
    },
    7,
)
