crates/ast/tests/snapshots/ast__labeled_empty_for.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstFor {
        range: AstRange {
            start: AstPoint { 0:1 },
            end: AstPoint { 0:15 },
        },
        vars: [],
        check: [],
        changes: [],
        content: Block(
            AstBlock {
                range: AstRange {
                    start: AstPoint { 0:13 },
                    end: AstPoint { 0:15 },
                },
                entries: [],
            },
        ),
        label: Some(
            AstIdentifier {
                range: AstRange {
                    start: AstPoint { 0:1 },
                    end: AstPoint { 0:2 },
                },
                value: "l",
            },
        ),
    },
    9,
)
