crates/ast/tests/snapshots/ast__lambda.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:33 },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:3 },
            },
            values: [
                AstLambdaParameter {
                    range: AstRange {
                        start: AstPoint { 0:1 },
                        end: AstPoint { 0:2 },
                    },
                    jtype: None,
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:1 },
                            end: AstPoint { 0:2 },
                        },
                        value: "n",
                    },
                },
            ],
        },
        rhs: Block(
            AstBlock {
                range: AstRange {
                    start: AstPoint { 0:7 },
                    end: AstPoint { 0:33 },
                },
                entries: [
                    Expression(
                        AstBlockExpression {
                            range: AstRange {
                                start: AstPoint { 0:9 },
                                end: AstPoint { 0:31 },
                            },
                            value: [
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:9 },
                                            end: AstPoint { 0:15 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:9 },
                                                        end: AstPoint { 0:15 },
                                                    },
                                                    value: "System",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:15 },
                                            end: AstPoint { 0:16 },
                                        },
                                        ident: None,
                                        values: None,
                                        operator: Dot(
                                            AstRange {
                                                start: AstPoint { 0:15 },
                                                end: AstPoint { 0:16 },
                                            },
                                        ),
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:16 },
                                            end: AstPoint { 0:19 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:16 },
                                                        end: AstPoint { 0:19 },
                                                    },
                                                    value: "out",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:19 },
                                            end: AstPoint { 0:20 },
                                        },
                                        ident: None,
                                        values: None,
                                        operator: Dot(
                                            AstRange {
                                                start: AstPoint { 0:19 },
                                                end: AstPoint { 0:20 },
                                            },
                                        ),
                                    },
                                ),
                                Base(
                                    AstBaseExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:20 },
                                            end: AstPoint { 0:27 },
                                        },
                                        ident: Some(
                                            Identifier(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:20 },
                                                        end: AstPoint { 0:27 },
                                                    },
                                                    value: "println",
                                                },
                                            ),
                                        ),
                                        values: None,
                                        operator: None,
                                    },
                                ),
                                Casted(
                                    AstCastedExpression {
                                        range: AstRange {
                                            start: AstPoint { 0:27 },
                                            end: AstPoint { 0:30 },
                                        },
                                        cast: AstJType {
                                            annotated: [],
                                            range: AstRange {
                                                start: AstPoint { 0:28 },
                                                end: AstPoint { 0:29 },
                                            },
                                            value: Class(
                                                AstIdentifier {
                                                    range: AstRange {
                                                        start: AstPoint { 0:28 },
                                                        end: AstPoint { 0:29 },
                                                    },
                                                    value: "n",
                                                },
                                            ),
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                ],
            },
        ),
    },
    15,
)
